<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">AccountBookEx3</string>

    <string name="income">수입</string>
    <string name="outcome">지출</string>
    <string name="date">날짜</string>
    <string name="memo">메모</string>
    <string name="total_colon">총합:</string>

    <string name="won">원</string>

    <string name="date_is">날짜가</string>
    <string name="income_outcome_is">수입/지출이</string>
    <string name="amount_is">금액이</string>

    <!-- 레코드 저장하고 완료되었음을 알리는 메시지. -->
    <string name="insert_done_message">저장되었습니다.</string>
    <string name="update_done_message">변경되었습니다.</string>
    <string name="delete_done_message">삭제되었습니다.</string>

    <!-- 추가 수정 취소 버튼에 쓸 문구 -->
    <string name="button_insert">추가</string>
    <string name="button_update">수정</string>
    <string name="button_cancel">취소</string>

    <!-- 레코드 삭제하기 전에 다시한번 확인하는 Dialog 문구 -->
    <string name="confirm_delete">삭제하시겠습니까?</string>

    <!-- AlertDialg의 예 아니오 -->
    <string name="yes">예</string>
    <string name="no">아니오</string>

    <!-- 화면에 표시할 내역 기간 중에 '~' -->
    <string name="tilde">~</string>

    <string name="minus_sign">−</string>
    <string name="equal_sign">=</string>
</resources>