<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.InsertFormFragment"
    >
    <data>
        <variable
            name="formedRecord"
            type="com.example.accountbookex3.data.FormedRecord"
            />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/csl_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/csl_buttons"
        >
        <TextView
            style="@style/InsertFormTv"
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={formedRecord.date}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <RadioGroup
            android:id="@+id/rg_income_outcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_date"
            app:layout_constraintLeft_toLeftOf="parent"
            >
            <RadioButton
                style="@style/InsertFormRb"
                android:id="@+id/rb_income"
                android:text="@string/income"
                android:checked="@={formedRecord.isIncome}"
                />
            <RadioButton
                style="@style/InsertFormRb"
                android:id="@+id/rb_outcome"
                android:text="@string/outcome"
                android:checked="@={!formedRecord.isIncome}"
                />
        </RadioGroup>
        <EditText
            style="@style/InsertFormTvAmount"
            android:id="@+id/et_amount"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@={formedRecord.amount}"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/rg_income_outcome"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <TextView
            style="@style/InsertFormTv"
            android:id="@+id/tv_won"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/won"
            app:layout_constraintTop_toBottomOf="@id/rg_income_outcome"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/et_amount"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>