<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="totalamounts"
            type="com.example.accountbookex3.data.TotalAmounts" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/TotalAmountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragment.TotalAmountsFragment">
        <TextView
            style="@style/TotalAmountTv"
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_colon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_income"
            />
        <TextView
            style="@style/TotalAmountTv"
            android:id="@+id/tv_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{totalamounts.totalIncome}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_total"
            app:layout_constraintRight_toLeftOf="@id/tv_minus"
            />
        <TextView
            style="@style/TotalAmountTv"
            android:id="@+id/tv_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus_sign"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_income"
            app:layout_constraintRight_toLeftOf="@id/tv_outcome"
            />
        <TextView
            style="@style/TotalAmountTv"
            android:id="@+id/tv_outcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{totalamounts.totalOutcome}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_minus"
            app:layout_constraintRight_toLeftOf="@id/tv_equals"
            />
        <TextView
            style="@style/TotalAmountTv"
            android:id="@+id/tv_equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equal_sign"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_outcome"
            app:layout_constraintRight_toLeftOf="@id/tv_total_amount"
            />
        <TextView
            style="@style/TotalAmountTv"
            android:id="@+id/tv_total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{totalamounts.totalAmount}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_equals"
            app:layout_constraintRight_toRightOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>