<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="inputFormData"
            type="com.example.accountbookex3.data.InputFormData"
            />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/csl_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/csl_buttons"
        >
        <TextView
            style="@style/InsertFormTv"
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{inputFormData.date}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/csl_income_outcome_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_date"
            >
            <RadioGroup
                android:id="@+id/rg_income_outcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                >
                <RadioButton
                    style="@style/InsertFormRb"
                    android:id="@+id/rb_income"
                    android:text="@string/income"
                    android:checked="@={inputFormData.isIncome}"
                    />
                <RadioButton
                    style="@style/InsertFormRb"
                    android:id="@+id/rb_outcome"
                    android:text="@string/outcome"
                    android:checked="@={!inputFormData.isIncome}"
                    />
            </RadioGroup>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/csl_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/rg_income_outcome"
                app:layout_constraintRight_toRightOf="parent"
                >
                <EditText
                    style="@style/InsertFormTvAmount"
                    android:id="@+id/et_amount"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:text="@={inputFormData.amount}"
                    android:inputType="number"
                    android:maxLength="8"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/tv_won"
                    />
                <TextView
                    style="@style/InsertFormTv"
                    android:id="@+id/tv_won"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/won"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/et_amount"
                    app:layout_constraintRight_toRightOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/csl_memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/csl_income_outcome_amount"
            >
            <TextView
                style="@style/InsertFormTv"
                android:id="@+id/tv_memo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />
            <EditText
                style="@style/InsertFormEt"
                android:id="@+id/et_memo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:text="@={inputFormData.memo}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tv_memo"
                app:layout_constraintRight_toRightOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>